# hockey_coach

./: .gitignore  Agents.md  README.md  file_list.txt  inspect_runner.py  ltad_normalizer.py  off_ice_titles.txt  output.txt  pyproject.toml
analysis/: field_completeness_by_source.csv  value_distributions_by_source.json
app/: requirements.txt
codex_tasks/: task001_video_pipeline.md  task001b_video_metadata.md  task001c_video_index.md  task001d_multi-video.md  task001e_yt_channel.md  task001f_videoID.md  task001g_ytapi.md  task002_season_planner.md  task003_ltad_index.md  task003b_ltad_json.md  task003c_ltad_normalize.md
data/: video_summary.md
mcp_server/: agent copy.py  chroma_utils.py  drill_planner.py  main.py  query_agent.py
models/: conduct.py  dryland_models.py  enriched_off_ice.py  ltad.py  mlhs_article.py  nhl_insight.py  off_ice.py
outputs/: all_drills_combined_unclassified.csv  all_drills_combined_unclassified.json  drills_classified_full.csv  drills_classified_full.json  drills_classified_sample.csv  drills_classified_sample.json  ltad_skill_analysis.md  ltad_skills_summary.md  off_ice_enriched_summary.md  video_clips_summary.md
prompts/: conduct_stage1_enrich.yaml  ltad_compare_prompt.yaml  ltad_extract_prompt.yaml  ltad_merge_prompt.yaml  ltad_postprocess_prompt.yaml  ltad_stage0_extract.yaml  ltad_stage1_parse_skills.yaml  ltad_stage2_enrich_skills.yaml  ltad_stage3_normalize.yaml  nhl_insight_extraction.txt  off_ice_search_prompt.yaml  off_ice_workout_input_prompt.yaml  off_ice_workout_outline_prompt.yaml  off_ice_workout_polish_prompt.yaml  off_ice_workout_research_prompt.yaml  off_ice_workout_synth_prompt.yaml  off_ice_workout_web_prompt.yaml  office_stage0_extract.yaml  office_stage1_merge_enrich.yaml  query_prompt.yaml  rerank_prompt.yaml  search_prompt.yaml  summarizer_prompt.yaml  video_search_prompt.yaml  video_summarizer_prompt.yaml  video_summarizer_prompt_dryland.yaml
utils/: __init__.py  (+1 more)
(+135 files in other folders)
