[project]
name = "hockey-coach-ai-assistant"
version = "0.1.0"
description = "Hockey (AI) Assistant Coach"
authors = [
  { name = "Stewart McKendry", email = "stewart.mckendry@gmail.com" }
]
requires-python = ">=3.11"

[tool.poetry]
name = "hockey-coach-ai-assistant"
version = "0.1.0"
description = "Hockey (AI) Assistant Coach"
authors = ["Stewart McKendry <stewart.mckendry@gmail.com>"]
packages = [
  { include = "app" }
]

[tool.poetry.dependencies]
python = "^3.11"
openai-agents = { git = "https://github.com/stewmckendry/openai-agents-python.git", extras = ["viz"] }
litellm = "*"
chromadb = "^1.0.15"
yt-dlp = "^2024.4.9"          # or omit version for latest
openai-whisper = { git = "https://github.com/openai/whisper.git" }
pandas = "^2.1.3"
pymupdf = "^1.23.7"
google-api-python-client = "^2.126.0"
more-itertools = "^10.1.0"
beautifulsoup4 = "^4.12.3"
lxml = "^5.2.1"  # or the latest version available

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
plan_drills = "app.client.main:main"
